Construct resources: construct globals

--- a/hyperapp/guesser/construct_resources.resources.yaml
+++ b/hyperapp/guesser/construct_resources.resources.yaml
@@ -6,6 +6,7 @@ import:
   - legacy_type.piece_ref.piece_ref
   - legacy_type.python_module.python_module
   - guesser.auto_importer.auto_importer_imports_fn
+  - guesser.global.construct_global
   - server.htest_runner.runner_method_collect_attributes
   - sync.subprocess_context.subprocess_running
 
@@ -26,6 +27,7 @@ definitions:
     import_list:
       htypes.python_module.python_module: legacy_type.python_module.python_module
       services.auto_importer_imports_ref: auto_importer_imports_ref
+      services.construct_global: guesser.global.construct_global
       services.mosaic: legacy_service.mosaic
       services.runner_method_collect_attributes_ref: runner_method_collect_attributes_ref
       services.resource_module_factory: legacy_service.resource_module_factory
