--- a/hyperapp/client/command_list.resources.yaml
+++ b/hyperapp/client/command_list.resources.yaml
@@ -1,7 +1,7 @@
 # Automatically generated file. Do not edit.
 
 import:
-- legacy_module.client.command_list
+- legacy_module.async.ui.qt.qt_keys
 - legacy_service.global_command_list
 - legacy_service.lcs
 - legacy_service.mosaic
@@ -11,24 +11,29 @@ import:
 - legacy_type.attribute.attribute
 - legacy_type.builtin.string
 - legacy_type.call.call
+- legacy_type.command.command_shortcut_d
 - legacy_type.command.object_commands_d
 - legacy_type.command_list.global_command_list
 - legacy_type.command_list.global_command_list_d
 - legacy_type.command_list.global_command_list_set_key_d
 - legacy_type.command_list.global_command_list_set_key_escape_d
+- legacy_type.command_list.item
 - legacy_type.command_list.open_global_command_list_d
 - legacy_type.command_list.open_view_command_list_d
 - legacy_type.command_list.view_command_list
 - legacy_type.command_list.view_command_list_d
 - legacy_type.command_list.view_command_list_set_key_d
 - legacy_type.command_list.view_command_list_set_key_escape_d
+- legacy_type.command_list.view_item
 - legacy_type.global_command.global_command_association
 - legacy_type.impl.global_command_impl
 - legacy_type.impl.impl_association
 - legacy_type.impl.list_spec
 - legacy_type.impl.method_command_impl
+- legacy_type.impl.python_object_association
 - legacy_type.lcs.lcs_set_resource_association
 - legacy_type.partial.partial
+- legacy_type.python_module.python_module_def
 associations:
 - _type: legacy_type.global_command.global_command_association
   command: open_global_command_list_command
@@ -42,6 +47,12 @@ associations:
   piece_t: legacy_type.command_list.view_command_list
   ctr_fn: view_command_list_partial
   spec: view_command_list_spec
+- _type: legacy_type.impl.python_object_association
+  t: legacy_type.command_list.global_command_list
+  function: global_command_list_partial
+- _type: legacy_type.impl.python_object_association
+  t: legacy_type.command_list.view_command_list
+  function: view_command_list_partial
 - _type: legacy_type.lcs.lcs_set_resource_association
   dir:
   - global_command_list_d
@@ -63,9 +74,20 @@ associations:
   - object_commands_d
   value: view_command_list_set_key_escape_command
 definitions:
+  command_list_module:
+    _type: legacy_type.python_module.python_module_def
+    module_name: client.command_list
+    file_name: command_list.dyn.py
+    import_list:
+      htypes.command.command_shortcut_d: legacy_type.command.command_shortcut_d
+      htypes.command_list.global_command_list: legacy_type.command_list.global_command_list
+      htypes.command_list.item: legacy_type.command_list.item
+      htypes.command_list.view_command_list: legacy_type.command_list.view_command_list
+      htypes.command_list.view_item: legacy_type.command_list.view_item
+      qt_keys: legacy_module.async.ui.qt.qt_keys
   global_command_list_attribute:
     _type: legacy_type.attribute.attribute
-    object: legacy_module.client.command_list
+    object: command_list_module
     attr_name: GlobalCommandList
   global_command_list_d:
     _type: legacy_type.call.call
@@ -109,7 +131,7 @@ definitions:
     function: legacy_type.command.object_commands_d
   open_global_command_list_attribute:
     _type: legacy_type.attribute.attribute
-    object: legacy_module.client.command_list
+    object: command_list_module
     attr_name: open_global_command_list
   open_global_command_list_command:
     _type: legacy_type.impl.global_command_impl
@@ -124,7 +146,7 @@ definitions:
     params: {}
   open_view_command_list_attribute:
     _type: legacy_type.attribute.attribute
-    object: legacy_module.client.command_list
+    object: command_list_module
     attr_name: open_view_command_list
   open_view_command_list_command:
     _type: legacy_type.impl.global_command_impl
@@ -139,7 +161,7 @@ definitions:
     params: {}
   view_command_list_attribute:
     _type: legacy_type.attribute.attribute
-    object: legacy_module.client.command_list
+    object: command_list_module
     attr_name: ViewCommandList
   view_command_list_d:
     _type: legacy_type.call.call
