--- a/hyperapp/sync/subprocess_context.resources.yaml
+++ b/hyperapp/sync/subprocess_context.resources.yaml
@@ -1,6 +1,7 @@
 import:
   - legacy_service.mosaic
   - legacy_service.bundler
+  - legacy_service.hyperapp_dir
   - legacy_service.subprocess
   - legacy_service.peer_registry
   - legacy_service.rpc_call_factory
@@ -49,6 +50,7 @@ definitions:
     import_list:
       services.mosaic: legacy_service.mosaic
       services.bundler: legacy_service.bundler
+      services.hyperapp_dir: legacy_service.hyperapp_dir
       services.subprocess_factory: legacy_service.subprocess
       services.peer_registry: legacy_service.peer_registry
       services.rpc_call_factory: legacy_service.rpc_call_factory
