--- a/hyperapp/guesser/construct_resources.resources.yaml
+++ b/hyperapp/guesser/construct_resources.resources.yaml
@@ -1,8 +1,11 @@
 import:
   - legacy_service.endpoint_registry
   - legacy_service.generate_rsa_identity
+  - legacy_service.hyperapp_dir
   - legacy_service.mosaic
+  - legacy_service.resource_loader
   - legacy_service.resource_module_factory
+  - legacy_service.resource_module_registry
   - legacy_service.resource_type_producer
   - legacy_service.rpc_endpoint_factory
   - legacy_type.attribute.attribute
@@ -33,9 +36,12 @@ definitions:
       services.construct_global: guesser.global.construct_global
       services.endpoint_registry: legacy_service.endpoint_registry
       services.generate_rsa_identity: legacy_service.generate_rsa_identity
+      services.hyperapp_dir: legacy_service.hyperapp_dir
       services.mosaic: legacy_service.mosaic
       services.runner_method_collect_attributes_ref: runner_method_collect_attributes_ref
+      services.resource_loader: legacy_service.resource_loader
       services.resource_module_factory: legacy_service.resource_module_factory
+      services.resource_module_registry: legacy_service.resource_module_registry
       services.resource_type_producer: legacy_service.resource_type_producer
       services.rpc_endpoint_factory: legacy_service.rpc_endpoint_factory
       services.subprocess_running: sync.subprocess_context.subprocess_running
