--- a/hyperapp/resource/resource_module.yaml
+++ b/hyperapp/resource/resource_module.yaml
@@ -4,5 +4,5 @@ require:
   - python_object_creg
 provide:
   - resource_module_registry
-  - fixture_resource_module_registry
   - resource_module_factory
+  - resource_loader
