Construct resources: load types from custom resources dir

--- a/hyperapp/guesser/construct_resources.resources.yaml
+++ b/hyperapp/guesser/construct_resources.resources.yaml
@@ -2,12 +2,15 @@ import:
   - legacy_service.endpoint_registry
   - legacy_service.generate_rsa_identity
   - legacy_service.hyperapp_dir
+  - legacy_service.legacy_type_resource_loader
+  - legacy_service.local_types
   - legacy_service.mosaic
   - legacy_service.resource_loader
   - legacy_service.resource_module_factory
   - legacy_service.resource_module_registry
   - legacy_service.resource_type_producer
   - legacy_service.rpc_endpoint_factory
+  - legacy_service.type_module_loader
   - legacy_type.attribute.attribute
   - legacy_type.piece_ref.piece_ref
   - legacy_type.python_module.python_module
@@ -37,6 +40,8 @@ definitions:
       services.endpoint_registry: legacy_service.endpoint_registry
       services.generate_rsa_identity: legacy_service.generate_rsa_identity
       services.hyperapp_dir: legacy_service.hyperapp_dir
+      services.legacy_type_resource_loader: legacy_service.legacy_type_resource_loader
+      services.local_types: legacy_service.local_types
       services.mosaic: legacy_service.mosaic
       services.runner_method_collect_attributes_ref: runner_method_collect_attributes_ref
       services.resource_loader: legacy_service.resource_loader
@@ -45,6 +50,7 @@ definitions:
       services.resource_type_producer: legacy_service.resource_type_producer
       services.rpc_endpoint_factory: legacy_service.rpc_endpoint_factory
       services.subprocess_running: sync.subprocess_context.subprocess_running
+      services.type_module_loader: legacy_service.type_module_loader
 
   construct_resources:
     _type: legacy_type.attribute.attribute
