--- a/hyperapp/guesser/construct_resources.resources.yaml
+++ b/hyperapp/guesser/construct_resources.resources.yaml
@@ -1,8 +1,11 @@
 import:
   - legacy_service.endpoint_registry
+  - legacy_service.code_module_loader
   - legacy_service.generate_rsa_identity
   - legacy_service.hyperapp_dir
+  - legacy_service.legacy_module_resource_loader
   - legacy_service.legacy_type_resource_loader
+  - legacy_service.local_modules
   - legacy_service.local_types
   - legacy_service.mosaic
   - legacy_service.resource_loader
@@ -38,9 +41,12 @@ definitions:
       services.auto_importer_imports_ref: auto_importer_imports_ref
       services.construct_global: guesser.global.construct_global
       services.endpoint_registry: legacy_service.endpoint_registry
+      services.code_module_loader: legacy_service.code_module_loader
       services.generate_rsa_identity: legacy_service.generate_rsa_identity
       services.hyperapp_dir: legacy_service.hyperapp_dir
+      services.legacy_module_resource_loader: legacy_service.legacy_module_resource_loader
       services.legacy_type_resource_loader: legacy_service.legacy_type_resource_loader
+      services.local_modules: legacy_service.local_modules
       services.local_types: legacy_service.local_types
       services.mosaic: legacy_service.mosaic
       services.runner_method_collect_attributes_ref: runner_method_collect_attributes_ref
