--- a/hyperapp/sample/sample_list.resources.yaml
+++ b/hyperapp/sample/sample_list.resources.yaml
@@ -1,7 +1,6 @@
 # Automatically generated file. Do not edit.
 
 import:
-- legacy_module.sample.sample_list
 - legacy_type.attribute.attribute
 - legacy_type.builtin.int
 - legacy_type.call.call
@@ -14,6 +13,8 @@ import:
 - legacy_type.impl.python_object_association
 - legacy_type.lcs.lcs_set_resource_association
 - legacy_type.partial.partial
+- legacy_type.python_module.python_module
+- legacy_type.sample_list.item
 - legacy_type.sample_list.open_sample_list_d
 - legacy_type.sample_list.sample_list
 - legacy_type.sample_list.sample_list_d
@@ -39,7 +40,7 @@ definitions:
     function: legacy_type.command.object_commands_d
   open_sample_list_attribute:
     _type: legacy_type.attribute.attribute
-    object: legacy_module.sample.sample_list
+    object: sample_list_module
     attr_name: open_sample_list
   open_sample_list_command:
     _type: legacy_type.impl.global_command_impl
@@ -54,11 +55,18 @@ definitions:
     params: {}
   sample_list_attribute:
     _type: legacy_type.attribute.attribute
-    object: legacy_module.sample.sample_list
+    object: sample_list_module
     attr_name: SampleList
   sample_list_d:
     _type: legacy_type.call.call
     function: legacy_type.sample_list.sample_list_d
+  sample_list_module:
+    _type: legacy_type.python_module.python_module
+    module_name: sample.sample_list
+    file_name: sample_list.dyn.py
+    import_list:
+      htypes.sample_list.item: legacy_type.sample_list.item
+      htypes.sample_list.sample_list: legacy_type.sample_list.sample_list
   sample_list_open_command:
     _type: legacy_type.impl.method_command_impl
     object_ctr: sample_list_partial
