Construct resources: handle fixtures modules

--- a/hyperapp/sample/sample_list.fixtures.resources.yaml
+++ b/hyperapp/sample/sample_list.fixtures.resources.yaml
@@ -1,19 +1,27 @@
+# Automatically generated file. Do not edit.
+
 import:
 - legacy_type.attribute.attribute
 - legacy_type.call.call
-- legacy_type.sample_list.sample_list
+- legacy_type.partial.partial
 - legacy_type.python_module.python_module
+- legacy_type.sample_list.sample_list
+associations: []
 definitions:
-  sample_list_module:
+  sample_list_fixtures_module:
     _type: legacy_type.python_module.python_module
-    module_name: sample_list_fixtures
+    module_name: sample_list.fixtures
     file_name: sample_list.fixtures.dyn.py
     import_list:
       htypes.sample_list.sample_list: legacy_type.sample_list.sample_list
   sample_list_piece:
     _type: legacy_type.call.call
-    function: sample_list_piece_attribute
+    function: sample_list_piece_partial
   sample_list_piece_attribute:
     _type: legacy_type.attribute.attribute
-    object: sample_list_module
+    object: sample_list_fixtures_module
     attr_name: sample_list_piece
+  sample_list_piece_partial:
+    _type: legacy_type.partial.partial
+    function: sample_list_piece_attribute
+    params: {}
