--- a/hyperapp/client/command_list.fixtures.resources.yaml
+++ b/hyperapp/client/command_list.fixtures.resources.yaml
@@ -1,76 +1,75 @@
+# Automatically generated file. Do not edit.
+
 import:
 - legacy_module.async.ui.view_command
+- legacy_service.mosaic
+- legacy_service.types
 - legacy_type.attribute.attribute
 - legacy_type.call.call
 - legacy_type.command_list.global_command_list
 - legacy_type.command_list.view_command_list
 - legacy_type.command_list_fixtures.sample_global_command_d
 - legacy_type.impl.global_command_impl
-- legacy_type.raw.raw
+- legacy_type.legacy_type.type
+- legacy_type.partial.partial
 - legacy_type.python_module.python_module
+associations: []
 definitions:
-
-  command_list_fixtures_aux_module:
-    _type: legacy_type.python_module.python_module
-    module_name: command_list_fixtures_aux
-    file_name: command_list.fixtures.aux.dyn.py
-    import_list: []
-
-  sample_global_command:
-    _type: legacy_type.attribute.attribute
-    object: command_list_fixtures_aux_module
-    attr_name: sample_global_command
-
-  sample_global_command_command:
-    _type: legacy_type.impl.global_command_impl
-    function: sample_global_command
-    dir: sample_global_command_d
-
-  sample_global_command_command_raw:
-    _type: legacy_type.raw.raw
-    resource: sample_global_command_command
-  sample_global_command_d:
-    _type: legacy_type.call.call
-    function: legacy_type.command_list_fixtures.sample_global_command_d
-
   command_list_fixtures_module:
     _type: legacy_type.python_module.python_module
-    module_name: command_list_fixtures
+    module_name: command_list.fixtures
     file_name: command_list.fixtures.dyn.py
     import_list:
+      htypes.call.call: legacy_type.call.call
       htypes.command_list.global_command_list: legacy_type.command_list.global_command_list
       htypes.command_list.view_command_list: legacy_type.command_list.view_command_list
-      services.sample_global_command_command: sample_global_command_command_raw
+      htypes.command_list_fixtures.sample_global_command_d: legacy_type.command_list_fixtures.sample_global_command_d
+      htypes.impl.global_command_impl: legacy_type.impl.global_command_impl
+      htypes.legacy_type.type: legacy_type.legacy_type.type
+      services.mosaic: legacy_service.mosaic
+      services.types: legacy_service.types
       view_command: legacy_module.async.ui.view_command
-
-  global_command_list_piece:
-    _type: legacy_type.call.call
-    function: global_command_list_piece_attribute
-  global_command_list_piece_attribute:
-    _type: legacy_type.attribute.attribute
-    object: command_list_fixtures_module
-    attr_name: global_command_list_piece
-
   global_command_list_global_command_list:
     _type: legacy_type.call.call
-    function: global_command_list_global_command_list_attribute
+    function: global_command_list_global_command_list_partial
   global_command_list_global_command_list_attribute:
     _type: legacy_type.attribute.attribute
     object: command_list_fixtures_module
     attr_name: global_command_list_global_command_list
-
+  global_command_list_global_command_list_partial:
+    _type: legacy_type.partial.partial
+    function: global_command_list_global_command_list_attribute
+    params: {}
+  global_command_list_piece:
+    _type: legacy_type.call.call
+    function: global_command_list_piece_partial
+  global_command_list_piece_attribute:
+    _type: legacy_type.attribute.attribute
+    object: command_list_fixtures_module
+    attr_name: global_command_list_piece
+  global_command_list_piece_partial:
+    _type: legacy_type.partial.partial
+    function: global_command_list_piece_attribute
+    params: {}
   view_command_list_piece:
     _type: legacy_type.call.call
-    function: view_command_list_piece_attribute
+    function: view_command_list_piece_partial
   view_command_list_piece_attribute:
     _type: legacy_type.attribute.attribute
     object: command_list_fixtures_module
     attr_name: view_command_list_piece
-
+  view_command_list_piece_partial:
+    _type: legacy_type.partial.partial
+    function: view_command_list_piece_attribute
+    params: {}
   view_command_list_root_view:
     _type: legacy_type.call.call
-    function: view_command_list_root_view_attribute
+    function: view_command_list_root_view_partial
   view_command_list_root_view_attribute:
     _type: legacy_type.attribute.attribute
     object: command_list_fixtures_module
     attr_name: view_command_list_root_view
+  view_command_list_root_view_partial:
+    _type: legacy_type.partial.partial
+    function: view_command_list_root_view_attribute
+    params: {}
