Auto importer: use services as globals

--- a/hyperapp/guesser/auto_importer.resources.yaml
+++ b/hyperapp/guesser/auto_importer.resources.yaml
@@ -1,9 +1,11 @@
 import:
+  - legacy_service.builtin_services
   - legacy_service.local_modules
   - legacy_service.python_object_creg
   - legacy_service.resource_module_registry
   - legacy_service.services
   - legacy_service.local_types
+  - legacy_service.services
   - legacy_service.types
   - legacy_type.attribute.attribute
   - legacy_type.auto_importer.import_rec
@@ -19,8 +21,13 @@ definitions:
     file_name: auto_importer.dyn.py
     import_list:
       htypes.auto_importer.import_rec: legacy_type.auto_importer.import_rec
+      services.builtin_services: legacy_service.builtin_services
+      services.local_modules: legacy_service.local_modules
+      services.local_types: legacy_service.local_types
       services.python_object_creg: legacy_service.python_object_creg
       services.resource_module_registry: legacy_service.resource_module_registry
+      services.types: legacy_service.types
+      services.services: legacy_service.services
 
   auto_importer_ctr:
     _type: legacy_type.attribute.attribute
@@ -30,11 +37,7 @@ definitions:
   auto_importer_partial:
     _type: legacy_type.partial.partial
     function: auto_importer_ctr
-    params:
-      services: legacy_service.services
-      types: legacy_service.types
-      local_types: legacy_service.local_types
-      local_modules: legacy_service.local_modules
+    params: {}
 
   auto_importer:
     _type: legacy_type.call.call
