--- a/hyperapp/guesser/module.resources.yaml
+++ b/hyperapp/guesser/module.resources.yaml
@@ -3,6 +3,7 @@ import:
 - guesser.auto_importer.auto_importer_loader
 - guesser.runner.runner_method_collect_attributes
 - legacy_service.mosaic
+- legacy_service.web
 - legacy_type.attribute.attribute
 - legacy_type.piece_ref.piece_ref
 - legacy_type.python_module.import_rec
@@ -33,6 +34,7 @@ definitions:
       services.auto_importer_loader_ref: auto_importer_loader_ref
       services.mosaic: legacy_service.mosaic
       services.runner_method_collect_attributes_ref: runner_method_collect_attributes_ref
+      services.web: legacy_service.web
 
   ModuleVisitor:
     _type: legacy_type.attribute.attribute
